made loading visible and fixed bug in FAQ, nav bar in Dev page

--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -35,6 +35,7 @@ html::-webkit-scrollbar{
 }
 body.dark{
   --background-color:#3D3C42;
+  --laoding-bg: #000;
   --blue:white;
   --dark-blue:#7FB5FF;
   --button-color:#1363DF;
@@ -97,6 +98,7 @@ html::-webkit-scrollbar-track{
   --text-color:#141E27;
   --text-color1:#141E27;
   --transition-delay: 1s;
+  --loading-bg: #fff;
   
   
 
@@ -254,7 +256,7 @@ iframe:hover{
   justify-content: center;
   height: 100%;
   width: 100%;
-  background-color: white;
+  background-color: var(--laoding-bg);
 }
 
 .loading{
@@ -362,4 +364,9 @@ iframe:hover{
     margin:  0;
     width: 48%;
   }
+}
+
+span#faq-quest{
+  width: 80%;
+  text-align: start;
 }
